@@ -29,6 +29,7 @@
 - ECS compliant Elastic agent metadata sent to fleet {pull}18006[18006]
 - Use default output by default {pull}18091[18091]
 - Use /tmp for default monitoring endpoint location for libbeat {pull}18131[18131]
+- Fix panic and flaky tests for the Agent. {pull}18135[18135]
 
 ==== New features
 
